[gd_scene load_steps=24 format=2]

[ext_resource path="res://addons/3d_widgets/gdscript/mouse_plane/mouse_plane_control.gd" type="Script" id=1]
[ext_resource path="res://addons/3d_widgets/gdscript/collision_object_input.gd" type="Script" id=2]
[ext_resource path="res://addons/3d_widgets/gdscript/block_selection.gd" type="Script" id=3]
[ext_resource path="res://addons/3d_widgets/scenes/instanced/move_plane_widget.gd" type="Script" id=4]
[ext_resource path="res://addons/3d_widgets/gdscript/object_projector.gd" type="Script" id=5]


[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 0.025, 1 )

[sub_resource type="SpatialMaterial" id=2]
render_priority = 1
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 0.501961 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.05, 0.05, 2.05 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 0.05, 0.05, 2.05 )

[sub_resource type="CubeMesh" id=5]
size = Vector3( 2.05, 0.05, 0.05 )

[sub_resource type="CubeMesh" id=6]
size = Vector3( 2.05, 0.05, 0.05 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 1, 0.025, 1 )

[sub_resource type="SpatialMaterial" id=8]
render_priority = 1
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0, 1, 0, 0.501961 )

[sub_resource type="CubeMesh" id=9]
size = Vector3( 0.05, 0.05, 2.05 )

[sub_resource type="CubeMesh" id=10]
size = Vector3( 0.05, 0.05, 2.05 )

[sub_resource type="CubeMesh" id=11]
size = Vector3( 2.05, 0.05, 0.05 )

[sub_resource type="CubeMesh" id=12]
size = Vector3( 2.05, 0.05, 0.05 )

[sub_resource type="BoxShape" id=13]
extents = Vector3( 1, 0.025, 1 )

[sub_resource type="SpatialMaterial" id=14]
render_priority = 1
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0, 0, 1, 0.501961 )

[sub_resource type="CubeMesh" id=15]
size = Vector3( 2.05, 0.05, 0.05 )

[sub_resource type="CubeMesh" id=16]
size = Vector3( 2.05, 0.05, 0.05 )

[sub_resource type="CubeMesh" id=17]
size = Vector3( 0.05, 0.05, 2.05 )

[sub_resource type="CubeMesh" id=18]
size = Vector3( 0.05, 0.05, 2.05 )

[node name="MovePlaneWidget" type="Spatial"]
script = ExtResource( 4 )

[node name="AxisX" type="KinematicBody" parent="."]
collision_layer = 2
collision_mask = 2

[node name="ObjectProjector" type="Spatial" parent="AxisX"]
script = ExtResource( 5 )
target = NodePath("../CollisionShape")

[node name="CollisionShape" type="CollisionShape" parent="AxisX"]
transform = Transform( -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="TopMesh" type="MeshInstance" parent="AxisX/CollisionShape"]
transform = Transform( 1, -1.19209e-07, 0, 1.19209e-07, 1, 0, 0, 0, 1, 2, 0, 0 )
material_override = SubResource( 2 )
mesh = SubResource( 3 )
material/0 = null

[node name="BottomMesh" type="MeshInstance" parent="AxisX/CollisionShape"]
transform = Transform( 1, -1.19209e-07, 0, 1.19209e-07, 1, 0, 0, 0, 1, -2, 0, 0 )
material_override = SubResource( 2 )
mesh = SubResource( 4 )
material/0 = null

[node name="RightMesh" type="MeshInstance" parent="AxisX/CollisionShape"]
transform = Transform( 1, -1.19209e-07, 0, 1.19209e-07, 1, 0, 0, 0, 1, 0, 0, 2 )
material_override = SubResource( 2 )
mesh = SubResource( 5 )
material/0 = null

[node name="LeftMesh" type="MeshInstance" parent="AxisX/CollisionShape"]
transform = Transform( 1, -1.19209e-07, 0, 1.19209e-07, 1, 0, 0, 0, 1, 0, 0, -2 )
material_override = SubResource( 2 )
mesh = SubResource( 6 )
material/0 = null

[node name="CollisionObjectInput" type="Node" parent="AxisX"]
script = ExtResource( 2 )

[node name="MousePlaneControl" type="Node" parent="AxisX"]
script = ExtResource( 1 )
custom_basis = Basis( 0, 0, 1, 0, 1, 0, 1, 0, 0 )

[node name="BlockSelection" type="Node" parent="AxisX"]
script = ExtResource( 3 )

[node name="AxisY" type="KinematicBody" parent="."]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )
collision_layer = 2
collision_mask = 2

[node name="ObjectProjector" type="Spatial" parent="AxisY"]
transform = Transform( -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )
script = ExtResource( 5 )
target = NodePath("../CollisionShape")

[node name="CollisionShape" type="CollisionShape" parent="AxisY"]
transform = Transform( -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 7 )

[node name="TopMesh" type="MeshInstance" parent="AxisY/CollisionShape"]
transform = Transform( 1, 6.11067e-13, 0, -6.11067e-13, 1, 0, 0, 0, 1, 2, 0, 0 )
material_override = SubResource( 8 )
mesh = SubResource( 9 )
material/0 = null

[node name="BottomMesh" type="MeshInstance" parent="AxisY/CollisionShape"]
transform = Transform( 1, 6.11067e-13, 0, -6.11067e-13, 1, 0, 0, 0, 1, -2, 0, 0 )
material_override = SubResource( 8 )
mesh = SubResource( 10 )
material/0 = null

[node name="RightMesh" type="MeshInstance" parent="AxisY/CollisionShape"]
transform = Transform( 1, 6.11067e-13, 0, -6.11067e-13, 1, 0, 0, 0, 1, 0, 0, 2 )
material_override = SubResource( 8 )
mesh = SubResource( 11 )
material/0 = null

[node name="LeftMesh" type="MeshInstance" parent="AxisY/CollisionShape"]
transform = Transform( 1, 6.11067e-13, 0, -6.11067e-13, 1, 0, 0, 0, 1, 0, 0, -2 )
material_override = SubResource( 8 )
mesh = SubResource( 12 )
material/0 = null

[node name="CollisionObjectInput" type="Node" parent="AxisY"]
script = ExtResource( 2 )

[node name="MousePlaneControl" type="Node" parent="AxisY"]
script = ExtResource( 1 )
custom_basis = Basis( 1, 0, 0, 0, 0, 1, 0, 1, 0 )

[node name="BlockSelection" type="Node" parent="AxisY"]
script = ExtResource( 3 )

[node name="AxisZ" type="KinematicBody" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
collision_layer = 2
collision_mask = 2

[node name="ObjectProjector" type="Spatial" parent="AxisZ"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
script = ExtResource( 5 )
target = NodePath("../CollisionShape")

[node name="CollisionShape" type="CollisionShape" parent="AxisZ"]
transform = Transform( -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 13 )

[node name="TopMesh" type="MeshInstance" parent="AxisZ/CollisionShape"]
transform = Transform( 7.12158e-15, -1.1921e-07, -1, -4.3712e-08, 1, -1.1921e-07, 1, 4.3712e-08, 1.91069e-15, 2, 0, 0 )
material_override = SubResource( 14 )
mesh = SubResource( 15 )
material/0 = null

[node name="BottomMesh" type="MeshInstance" parent="AxisZ/CollisionShape"]
transform = Transform( 7.12158e-15, -1.1921e-07, -1, -4.3712e-08, 1, -1.1921e-07, 1, 4.3712e-08, 1.91069e-15, -2, 0, 0 )
material_override = SubResource( 14 )
mesh = SubResource( 16 )
material/0 = null

[node name="RightMesh" type="MeshInstance" parent="AxisZ/CollisionShape"]
transform = Transform( 7.12158e-15, -1.1921e-07, -1, -4.3712e-08, 1, -1.1921e-07, 1, 4.3712e-08, 1.91069e-15, 0, 0, 2 )
material_override = SubResource( 14 )
mesh = SubResource( 17 )
material/0 = null

[node name="LeftMesh" type="MeshInstance" parent="AxisZ/CollisionShape"]
transform = Transform( 7.12158e-15, -1.1921e-07, -1, -4.3712e-08, 1, -1.1921e-07, 1, 4.3712e-08, 1.91069e-15, 0, 0, -2 )
material_override = SubResource( 14 )
mesh = SubResource( 18 )
material/0 = null

[node name="CollisionObjectInput" type="Node" parent="AxisZ"]
script = ExtResource( 2 )

[node name="MousePlaneControl" type="Node" parent="AxisZ"]
script = ExtResource( 1 )

[node name="BlockSelection" type="Node" parent="AxisZ"]
script = ExtResource( 3 )
